proofing blog post

--- a/src/app/blog/posts/the-12-week-year.mdx
+++ b/src/app/blog/posts/the-12-week-year.mdx
@@ -13,7 +13,7 @@ tag: 'Journal'
 
 ## Transforming Your Year: How "The 12 Week Year" Changed My Approach to Goal Achievement
 
-Have you ever reached December wondering where the year went and why your New Year's resolutions fell by the wayside? A few years ago I discovered a game-changing approach in Brian P. Moran and Michael Lennington's "The 12 Week Year" that's revolutionized how I think about goal-setting and execution.
+Have you ever reached December wondering where the year went and why your New Year's resolutions fell by the wayside? A few years ago I discovered a game-changing approach in Brian P. Moran and Michael Lennington's "The 12 Week Year" which has revolutionized how I think about goal-setting and execution.
 
 ## The Problem with Traditional Annual Planning
 
