update project with data for Next.js integration, add link to project github repo, update image to reflect updated UI

--- a/src/app/work/projects/WETF-Radio.mdx
+++ b/src/app/work/projects/WETF-Radio.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'WETF Radio - The Jazz Station'
 publishedAt: '2025-01-15'
-summary: 'Modern web application built with React and TypeScript for a type-safe frontend, styled with Bootstrap for responsive design. Backend implemented using Node.js and Express, with MongoDB as the document database. Complete JavaScript/TypeScript stack enabling efficient development and maintenance.'
+summary: 'Modern web application built with Next.js 15 using the App Router architecture, providing server components, nested layouts, and streamlined data fetching. The application is built with React and TypeScript for type safety, styled with Bootstrap for responsive design. Backend functionality is handled through Next.js route handlers running on Node.js, with MongoDB and Apollo GraphQL for efficient data management. Complete JavaScript/TypeScript stack enabling efficient development and maintenance.'
 images:
   - '/images/projects/project-01/WETF-home.png'
   - '/images/projects/project-01/WETF-schedule.png'
@@ -11,11 +11,12 @@ team:
     avatar: '/images/avatar.png'
     linkedIn: 'https://www.linkedin.com/in/alejandro-a-villanueva/'
 link: 'https://react-radio.onrender.com/'
+repo: 'https://github.com/aavillanueva6/ReactRadio'
 ---
 
 ## Overview
 
-Modern web application built with React and TypeScript for a type-safe frontend, styled with Bootstrap for responsive design. Backend implemented using Node.js and Express, with MongoDB an Apollo GraphQL for efficient data management. Complete JavaScript/TypeScript stack enabling efficient development and maintenance.
+Modern web application built with Next.js 15 using the App Router architecture, providing server components, nested layouts, and streamlined data fetching. The application is built with React and TypeScript for type safety, styled with Bootstrap for responsive design. Backend functionality is handled through Next.js route handlers running on Node.js, with MongoDB and Apollo GraphQL for efficient data management. Complete JavaScript/TypeScript stack enabling efficient development and maintenance.
 
 ## Key Features
 
@@ -26,7 +27,7 @@ Modern web application built with React and TypeScript for a type-safe frontend,
 
 ## Technologies Used
 
-- **React and TypeScript**: Frontend architecture leveraging type-safe components for robust, maintainable code that scales.
+- **Next.js and React with TypeScript**: Full-stack React framework providing server-side rendering, routing, and API functionality, built with type-safe components for robust, maintainable code that scales
 - **MongoDB and Apollo GraphQL**: Optimized data layer combining flexible document storage with precise GraphQL queries, enhanced by intelligent client-side caching for lightning-fast user interactions.
 - **Bootstrap**: Production-ready UI framework enabling responsive layouts and consistent brand styling across all device sizes.
 
@@ -36,8 +37,12 @@ Throughout development, a key challenge was translating client requirements into
 
 The project also served as my introduction to TypeScript. Implementing strong typing not only reduced runtime errors but also improved code maintainability through enhanced IDE support and automated refactoring capabilities.
 
+Additionally, this project was my first experience with Next.js and its App Router architecture. Working with server components, nested layouts, and built-in data fetching patterns helped me understand modern React development practices and the benefits of server-side rendering.
+
 ## Outcome
 
 The website is undergoing final review before launching to production. Upon client approval, the site will go live at their designated URL.
 
-Visit the site at <a href='https://react-radio.onrender.com/' target='_blank' rel='noopener noreferrer'>WETF Radio - The Jazz Station</a>
+Deployed application <a href='https://react-radio.onrender.com/' target='_blank' rel='noopener noreferrer'>WETF Radio - The Jazz Station</a>
+
+Github repository <a href='https://github.com/aavillanueva6/ReactRadio' target='_blank' rel='noopener noreferrer'>aavillanueva6/ReactRadio</a>
