reconfigure file naming and folder structure, add WETF-mobile project

--- a/src/app/work/projects/WETF-Radio-web.mdx
+++ b/src/app/work/projects/WETF-Radio-web.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'WETF Radio - The Jazz Station'
-publishedAt: '2025-01-15'
+publishedAt: '2025-01-16'
 summary: 'Modern web application built with Next.js 15 using the App Router architecture, providing server components, nested layouts, and streamlined data fetching. The application is built with React and TypeScript for type safety, styled with Bootstrap for responsive design. Backend functionality is handled through Next.js route handlers running on Node.js, with MongoDB and Apollo GraphQL for efficient data management. Complete JavaScript/TypeScript stack enabling efficient development and maintenance.'
 images:
-  - '/images/projects/project-01/WETF-home.png'
-  - '/images/projects/project-01/WETF-schedule.png'
+  - '/images/projects/WETF-web/WETF-home.png'
+  - '/images/projects/WETF-web/WETF-schedule.png'
 team:
   - name: 'Alejandro Villanueva'
     role: 'Software Engineer'
@@ -45,4 +45,4 @@ The website is undergoing final review before launching to production. Upon clie
 
 Deployed application <a href='https://react-radio.onrender.com/' target='_blank' rel='noopener noreferrer'>WETF Radio - The Jazz Station</a>
 
-Github repository <a href='https://github.com/aavillanueva6/ReactRadio' target='_blank' rel='noopener noreferrer'>aavillanueva6/ReactRadio</a>
+Github repository <a href='https://github.com/aavillanueva6/WETF-web' target='_blank' rel='noopener noreferrer'>aavillanueva6/WETF-web</a>
