minor formatting changes

--- a/src/app/blog/posts/bioreactors-to-browsers.mdx
+++ b/src/app/blog/posts/bioreactors-to-browsers.mdx
@@ -12,7 +12,7 @@ Hey there! I wanted to share my experience transitioning from chemical engineeri
 
 I've always considered myself a lifetime learner. After relocating to the Seattle area, I couldn't help but notice the vibrant tech scene around me. Friends were solving fascinating problems through code, creating solutions with tangible, real-world impact – something that's always motivated me throughout my career.
 
-Don't get me wrong, I thoroughly enjoyed my years in Biotech at Lilly and AGC Bio. I had the opportunity to both lead and participate in some really great projects, from my first project where I installed a set of pumps that ended up getting named after me (light hazing from the operations team), to being on the team to design the manufacturing facility for a new product at Lilly, to designing and building facilities for mAb, microbial, and cell & gene lines at AGC. But I found myself seeking a new chapter and fresh avenues for growth. Seattle's tech ecosystem presented the perfect opportunity to explore that path.
+Don't get me wrong, I thoroughly enjoyed my years in Biotech at Lilly and AGC Bio. I had the opportunity to both lead and participate in some really great projects. From my first project where I installed a set of pumps that ended up getting named after me (light hazing from the operations team), to being on the team to design the manufacturing facility for a new product at Lilly, to designing and building facilities for mAb, microbial, and cell & gene lines at AGC. But I found myself seeking a new chapter and fresh avenues for growth. Seattle's tech ecosystem presented the perfect opportunity to explore that path.
 
 ## Engineering Mindset: A Secret Weapon
 
@@ -52,7 +52,7 @@ One of the most satisfying aspects of software engineering compared to chemical 
 
 If you're an engineer contemplating a similar transition, I'll be honest – this field is challenging, and the job market is competitive. However, with tenacity and persistent effort, success is absolutely achievable.
 
-The key is embracing continuous learning. In my relatively short time in software development, I've already witnessed major changes to systems and technologies – React releasing versions 18 and 19 within 2.5 years (the time that I have spent learning it), Next.js updating almost yearly. Staying current requires a commitment to growth.
+I believe that the key is embracing continuous learning. In my relatively short time in software development, I've already witnessed major changes to systems and technologies – React releasing versions 18 and 19 within the 2.5 years that I have been learning it, Next.js updating almost yearly. Staying current requires a commitment to growth.
 
 But that's also what makes this space exciting. The foundational problem-solving skills you've developed as an engineer are more valuable than you might realize. They provide a sturdy framework upon which to build your technical skills.
 
